--- a/index.html
+++ b/index.html
@@ -19,39 +19,18 @@
     <!-- Encabezad-->
     <header>
         <!--version mobile  -->
-        <div class="menu-mobile"></div>
-        <div class="barra">
-            <a href="#">
-                <img src="img/logotipo.png" alt="Logo S - Design Studio">
-            </a>
+        <div class="menu-mobile">
+            <div class="barra">
+                <a href="#" class="logo">
+                    <img src="img/logotipo.png" alt="Logo S - Design Studio">
+                </a>
 
-            <a href="#" id="btnMenu">
+                <a href="#" id="btnMenu">
 
-                <i class="fa-solid fa-bars"></i>
-            </a>
+                    <i class="fa-solid fa-bars"></i>
+                </a>
 
-        </div>
-
-        <nav class="menu-principal">
-            <a href="#" class="volver-arriba">INICIO</a>
-            <a href="#" class="scroll-suave">PROYECTOS</a>
-            <a href="#" class="scroll-acercaDe">ACERCA DE</a>
-            <a href="#" class="scroll-equipo">NUESTRO EQUIPO</a>
-            <a href="#" class="scroll-suave">CONTACTO</a>
-        </nav>
-
-
-
-
-
-
-        <!-- version escritorio  -->
-
-        <div class="menu-bar-pc">
-            <a href="#">
-                <img src="img/logotipo.png" alt="Logo S - Design Studio">
-
-            </a>
+            </div>
 
             <nav class="menu-principal">
                 <a href="#" class="volver-arriba">INICIO</a>
@@ -61,8 +40,26 @@
                 <a href="#" class="scroll-suave">CONTACTO</a>
             </nav>
 
-
         </div>
+
+
+
+
+
+
+        <!-- version escritorio  -->
+
+        <div class="menu-bar-pc">
+            <a href="#" class="logo">
+                <img src="img/logotipo.png" alt="Logo S - Design Studio">
+            </a>
+            <nav class="menu-principal">
+                <a href="#" class="volver-arriba">INICIO</a>
+                <a href="#" class="scroll-suave">PROYECTOS</a>
+                <a href="#" class="scroll-acercaDe">ACERCA DE</a>
+                <a href="#" class="scroll-equipo">NUESTRO EQUIPO</a>
+                <a href="#" class="scroll-suave">CONTACTO</a>
+            </nav>
 
         <div class="top-redes">
             <a href="#">
@@ -76,15 +73,14 @@
             </a>
 
         </div>
+    </div>
 
     </header>
 
     <div class="fixed-header" id="fixedHeader">
-        <a href="#">
+        <a href="#" class="logo">
             <img src="img/logotipo.png" alt="Logo S - Design Studio">
-
         </a>
-
         <nav class="menu-principal">
             <a href="#" class="volver-arriba">INICIO</a>
             <a href="#" class="scroll-suave">PROYECTOS</a>
@@ -92,9 +88,7 @@
             <a href="#" class="scroll-equipo">NUESTRO EQUIPO</a>
             <a href="#" class="scroll-suave">CONTACTO</a>
         </nav>
-
-
-    </div>
+    
 
     <div class="top-redes">
         <a href="#">
@@ -108,6 +102,7 @@
         </a>
 
     </div>
+</div>
 
 
     <!-- main -->
@@ -117,41 +112,42 @@
 
         <section class="banner-principal">
             <div class="banner" id="banner"></div>
-            <div class="texto-banner>">
+            <div class="texto-banner">
                 <h2>Siempre Innovando</h2>
                 <h1>Desing Studio</h1>
                 <a href="#" class="scroll-suave">VER PROYECTOS</a>
             </div>
-
         </section>
 
         <!-- Proyectos -->
 
-        <section class="Proyectos" id="Proyectos">
+        <section class="proyectos" id="proyectos">
             <div class="contenedor">
-                <div class="titulo-seccion"></div>
+                <div class="titulo-seccion">
                 <h2>Ultimos proecytos</h2>
                 <p>Somos especialistas en entregar los mejores trabajos y de más alta calidad</p>
             </div>
-            <div class="galeria-proyecto>">
-                <img src="img/proyecto1.jpg" alt="Proyecto1" class="imagen-proyeceto">
-            </div>
-            <div class="galeria-proyecto>">
-                <img src="img/proyecto2.jpg" alt="proyecto2" class="imagen-proyeceto">
-            </div>
-            <div class="galeria-proyecto>">
-                <img src="img/proyecto3.jpg" alt="proyecto3" class="imagen-proyeceto">
-            </div>
-            <div class="galeria-proyecto>">
-                <img src="img/proyecto4.jpg" alt="proyecto4" class="imagen-proyeceto">
-            </div>
-            <div class="galeria-proyecto>">
-                <img src="img/proyecto5.jpg" alt="Proyecto5" class="imagen-proyeceto">
-            </div>
-            <div class="galeria-proyecto>">
-                <img src="img/proyecto6.jpg" alt="Proyecto6" class="imagen-proyeceto">
-            </div>
+                <div class="galeria-proyectos">
+                <div class="proyectos">    
+                    <img src="img/proyecto1.jpg" alt="Proyecto1" class="imagen-proyeceto">
+                </div>
+                <div class="proyectos">
+                    <img src="img/proyecto2.jpg" alt="proyecto2" class="imagen-proyeceto">
+                </div>
+                <div class="proyectos">
+                    <img src="img/proyecto3.jpg" alt="proyecto3" class="imagen-proyeceto">
+                </div>
+                <div class="proyectos">
+                    <img src="img/proyecto4.jpg" alt="proyecto4" class="imagen-proyeceto">
+                </div>
+                <div class="proyectos">
+                    <img src="img/proyecto5.jpg" alt="Proyecto5" class="imagen-proyeceto">
+                </div>
+                <div class="proyectos">
+                    <img src="img/proyecto6.jpg" alt="Proyecto6" class="imagen-proyeceto">
+                </div>
 
+            </div>
 
         </section>
 
@@ -179,12 +175,17 @@
         <section class="contenedor-slider">
             <div class="slider" id="slider">
                 <div class="slide">
-                    <img src="img/slide1.jpg" alt="slide1">
-                    <img src="img/slide2.jpg" alt="slide2">
-                    <img src="img/slide3.jpg" alt="slide3">
-                    <img src="img/slide4.jpg" alt="slide4">
+                    <img src="img/slide1.jpg" alt="slide">
                 </div>
-
+                <div class="slide">
+                    <img src="img/slide2.jpg" alt="slide">
+                </div>
+                <div class="slide">
+                    <img src="img/slide3.jpg" alt="slide">
+                </div>
+                <div class="slide">
+                    <img src="img/slide4.jpg" alt="slide">
+                </div>
             </div>
             <div class="btn-anterior" id="btnAnterior">
                 <i class="fa-solid fa-arrow-left"></i>
@@ -209,29 +210,27 @@
                         <div class="foto">
                             <img src="img/foto1.jpg" alt="persona">
                         </div>
-                        <div class="text">
+                        <div class="texto">
                             <h3>Raul Gonzaloes</h3>
                             <h4>Disenador Grafico</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, corrupti.</p>
                         </div>
                     </div>
-
                     <div class="persona-equipo">
                         <div class="foto">
                             <img src="img/foto2.jpg" alt="persona2">
                         </div>
-                        <div class="text">
+                        <div class="texto">
                             <h3>Paul Ramirez</h3>
                             <h4>Desarrollador Web</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, corrupti.</p>
                         </div>
                     </div>
-
                     <div class="persona-equipo">
                         <div class="foto">
                             <img src="img/foto3.jpg" alt="persona3">
                         </div>
-                        <div class="text">
+                        <div class="texto">
                             <h3>Maria Castro</h3>
                             <h4>Publicista</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, corrupti.</p>
@@ -256,6 +255,18 @@
                             <i class="fa-solid fa-paintbrush"></i>
                         </div>
                         <div class="texto-info">
+                            <h4>Imaginamos y diseñamos</h4>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+
+                        </div>
+                    </div>
+                    <div class="contenido-info">
+                        <div class="icono-info">
+                            <i class="fa-solid fa-desktop"></i>
+                        </div>
+                        <div class="texto-info">
+                            <h4>Creamos</h4>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
 
                         </div>
                     </div>
@@ -273,9 +284,68 @@
         </section>
 
 
+        <!-- contacto -->
+
+        <section class="contacto" id="contacto">
+            <div class="contenedor">
+                <div class="contenedor-formulario">
+                    <div class="formulario">
+                        <h2>cuentanos sobre tu proyecto</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                        <form>
+                            <div>
+                                <input type="text" name="nombre" placeholder="Nombre">
+                            </div>
+
+                            <div>
+                                <input type="email" name="email" placeholder="Correo">
+                            </div>
+
+                            <div>
+                                <textarea name="mensaje" placeholder="Cuentanos de tu proyecto"></textarea>
+                            </div>
+                            <div>
+                                <input type="submit" name="enviar" value="Enviar">
+                            </div>
+                        </form>
+                    </div>
+
+                    <div class="foto">
+
+                    </div>
+
+                </div>
+
+
+            </div>
+        </section>
+
 
 
     </section>
+
+    <!-- pies de pagina -->
+
+    <footer>
+        <div class="copy">
+            <p>Todos los derechos reservador</p>
+            <div class="footer-redes">
+                <a href="#">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
+                <a href="#">
+                    <i class="fa-brands fa-x-twitter"></i>
+                </a>
+                <a href="#">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+
+            </div>
+        </div>
+
+
+
+    </footer>
 
 
 
