se agrego JS y se termino la parte de HTML Y CSS

--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
                 <a href="#" class="scroll-suave">CONTACTO</a>
             </nav>
 
-        <div class="top-redes">
-            <a href="#">
-                <i class="fa-brands fa-facebook"></i>
-            </a>
-            <a href="#">
-                <i class="fa-brands fa-x-twitter"></i>
-            </a>
-            <a href="#">
-                <i class="fa-brands fa-instagram"></i>
-            </a>
+            <div class="top-redes">
+                <a href="#">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
+                <a href="#">
+                    <i class="fa-brands fa-x-twitter"></i>
+                </a>
+                <a href="#">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
 
+            </div>
         </div>
-    </div>
 
     </header>
 
@@ -88,21 +88,21 @@
             <a href="#" class="scroll-equipo">NUESTRO EQUIPO</a>
             <a href="#" class="scroll-suave">CONTACTO</a>
         </nav>
-    
 
-    <div class="top-redes">
-        <a href="#">
-            <i class="fa-brands fa-facebook"></i>
-        </a>
-        <a href="#">
-            <i class="fa-brands fa-x-twitter"></i>
-        </a>
-        <a href="#">
-            <i class="fa-brands fa-instagram"></i>
-        </a>
 
+        <div class="top-redes">
+            <a href="#">
+                <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="#">
+                <i class="fa-brands fa-x-twitter"></i>
+            </a>
+            <a href="#">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
+
+        </div>
     </div>
-</div>
 
 
     <!-- main -->
@@ -124,30 +124,30 @@
         <section class="proyectos" id="proyectos">
             <div class="contenedor">
                 <div class="titulo-seccion">
-                <h2>Ultimos proecytos</h2>
-                <p>Somos especialistas en entregar los mejores trabajos y de más alta calidad</p>
-            </div>
+                    <h2>Ultimos proecytos</h2>
+                    <p>Somos especialistas en entregar los mejores trabajos y de más alta calidad</p>
+                </div>
                 <div class="galeria-proyectos">
-                <div class="proyectos">    
-                    <img src="img/proyecto1.jpg" alt="Proyecto1" class="imagen-proyeceto">
-                </div>
-                <div class="proyectos">
-                    <img src="img/proyecto2.jpg" alt="proyecto2" class="imagen-proyeceto">
-                </div>
-                <div class="proyectos">
-                    <img src="img/proyecto3.jpg" alt="proyecto3" class="imagen-proyeceto">
-                </div>
-                <div class="proyectos">
-                    <img src="img/proyecto4.jpg" alt="proyecto4" class="imagen-proyeceto">
-                </div>
-                <div class="proyectos">
-                    <img src="img/proyecto5.jpg" alt="Proyecto5" class="imagen-proyeceto">
-                </div>
-                <div class="proyectos">
-                    <img src="img/proyecto6.jpg" alt="Proyecto6" class="imagen-proyeceto">
-                </div>
+                    <div class="proyectos">
+                        <img src="img/proyecto1.jpg" alt="Proyecto1" class="imagen-proyeceto">
+                    </div>
+                    <div class="proyectos">
+                        <img src="img/proyecto2.jpg" alt="proyecto2" class="imagen-proyeceto">
+                    </div>
+                    <div class="proyectos">
+                        <img src="img/proyecto3.jpg" alt="proyecto3" class="imagen-proyeceto">
+                    </div>
+                    <div class="proyectos">
+                        <img src="img/proyecto4.jpg" alt="proyecto4" class="imagen-proyeceto">
+                    </div>
+                    <div class="proyectos">
+                        <img src="img/proyecto5.jpg" alt="Proyecto5" class="imagen-proyeceto">
+                    </div>
+                    <div class="proyectos">
+                        <img src="img/proyecto6.jpg" alt="Proyecto6" class="imagen-proyeceto">
+                    </div>
 
-            </div>
+                </div>
 
         </section>
 
@@ -329,18 +329,17 @@
     <footer>
         <div class="copy">
             <p>Todos los derechos reservador</p>
-            <div class="footer-redes">
-                <a href="#">
-                    <i class="fa-brands fa-facebook"></i>
-                </a>
-                <a href="#">
-                    <i class="fa-brands fa-x-twitter"></i>
-                </a>
-                <a href="#">
-                    <i class="fa-brands fa-instagram"></i>
-                </a>
-
-            </div>
+        </div>
+        <div class="footer-redes">
+            <a href="#">
+                <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="#">
+                <i class="fa-brands fa-x-twitter"></i>
+            </a>
+            <a href="#">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
         </div>
 
 
@@ -353,6 +352,9 @@
 
 
 
+    <script src="js/jquery-3.7.1.min.js"></script>
+    <!-- <script src="js/banner.js"></script> -->
+    <script src="js/stickyHeader.js"></script>
     <script src="js/prefixfree.min.js"></script>
 </body>
 
