hasata aqui le anime el boton para subir al menu

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
 
 <body>
 
+    <!-- boton "volver arriba" -->
+    <div class="btn-volver-arriba" id="btnVolverArriba">
+        <a href="#" class="volver-arriba">
+            <i class="fa-solid fa-arrow-up"></i>
+        </a>
+    </div>
+
     <!-- Encabezad-->
     <header>
         <!--version mobile  -->
@@ -34,10 +41,10 @@
 
             <nav class="menu-principal">
                 <a href="#" class="volver-arriba">INICIO</a>
-                <a href="#" class="scroll-suave">PROYECTOS</a>
-                <a href="#" class="scroll-acercaDe">ACERCA DE</a>
-                <a href="#" class="scroll-equipo">NUESTRO EQUIPO</a>
-                <a href="#" class="scroll-suave">CONTACTO</a>
+                <a href="#proyectos" class="scroll-suave">PROYECTOS</a>
+                <a href="acercaDe" class="scroll-acercaDe">ACERCA DE</a>
+                <a href="#equipo" class="scroll-equipo">NUESTRO EQUIPO</a>
+                <a href="#contacto" class="scroll-suave">CONTACTO</a>
             </nav>
 
         </div>
@@ -55,10 +62,10 @@
             </a>
             <nav class="menu-principal">
                 <a href="#" class="volver-arriba">INICIO</a>
-                <a href="#" class="scroll-suave">PROYECTOS</a>
-                <a href="#" class="scroll-acercaDe">ACERCA DE</a>
-                <a href="#" class="scroll-equipo">NUESTRO EQUIPO</a>
-                <a href="#" class="scroll-suave">CONTACTO</a>
+                <a href="#proyectos" class="scroll-suave">PROYECTOS</a>
+                <a href="#acercaDe" class="scroll-acercaDe">ACERCA DE</a>
+                <a href="#equipo" class="scroll-equipo">NUESTRO EQUIPO</a>
+                <a href="#contacto" class="scroll-suave">CONTACTO</a>
             </nav>
 
             <div class="top-redes">
@@ -83,10 +90,10 @@
         </a>
         <nav class="menu-principal">
             <a href="#" class="volver-arriba">INICIO</a>
-            <a href="#" class="scroll-suave">PROYECTOS</a>
-            <a href="#" class="scroll-acercaDe">ACERCA DE</a>
-            <a href="#" class="scroll-equipo">NUESTRO EQUIPO</a>
-            <a href="#" class="scroll-suave">CONTACTO</a>
+            <a href="#proyectos" class="scroll-suave">PROYECTOS</a>
+            <a href="#acercaDe" class="scroll-acercaDe">ACERCA DE</a>
+            <a href="#equipo" class="scroll-equipo">NUESTRO EQUIPO</a>
+            <a href="#contacto" class="scroll-suave">CONTACTO</a>
         </nav>
 
 
@@ -124,7 +131,7 @@
         <section class="proyectos" id="proyectos">
             <div class="contenedor">
                 <div class="titulo-seccion">
-                    <h2>Ultimos proecytos</h2>
+                    <h2>Ultimos Proyectos</h2>
                     <p>Somos especialistas en entregar los mejores trabajos y de más alta calidad</p>
                 </div>
                 <div class="galeria-proyectos">
@@ -356,6 +363,7 @@
     <!-- <script src="js/banner.js"></script> -->
     <script src="js/stickyHeader.js"></script>
     <script src="js/prefixfree.min.js"></script>
+    <script src="js/scrollSuave.js"></script>
 </body>
 
 </html>
