"se agrego el modal"

--- a/index.html
+++ b/index.html
@@ -136,27 +136,29 @@
                 </div>
                 <div class="galeria-proyectos">
                     <div class="proyectos">
-                        <img src="img/proyecto1.jpg" alt="Proyecto1" class="imagen-proyeceto">
+                        <img src="img/proyecto1.jpg" alt="Proyecto1" class="imagen-proyecto">
                     </div>
                     <div class="proyectos">
-                        <img src="img/proyecto2.jpg" alt="proyecto2" class="imagen-proyeceto">
+                        <img src="img/proyecto2.jpg" alt="proyecto2" class="imagen-proyecto">
                     </div>
                     <div class="proyectos">
-                        <img src="img/proyecto3.jpg" alt="proyecto3" class="imagen-proyeceto">
+                        <img src="img/proyecto3.jpg" alt="proyecto3" class="imagen-proyecto">
                     </div>
                     <div class="proyectos">
-                        <img src="img/proyecto4.jpg" alt="proyecto4" class="imagen-proyeceto">
+                        <img src="img/proyecto4.jpg" alt="proyecto4" class="imagen-proyecto">
                     </div>
                     <div class="proyectos">
-                        <img src="img/proyecto5.jpg" alt="Proyecto5" class="imagen-proyeceto">
+                        <img src="img/proyecto5.jpg" alt="Proyecto5" class="imagen-proyecto">
                     </div>
                     <div class="proyectos">
-                        <img src="img/proyecto6.jpg" alt="Proyecto6" class="imagen-proyeceto">
+                        <img src="img/proyecto6.jpg" alt="Proyecto6" class="imagen-proyecto">
                     </div>
 
                 </div>
 
         </section>
+
+
 
         <!-- acerca de -->
 
@@ -362,8 +364,10 @@
     <script src="js/jquery-3.7.1.min.js"></script>
     <!-- <script src="js/banner.js"></script> -->
     <script src="js/stickyHeader.js"></script>
-    <script src="js/prefixfree.min.js"></script>
     <script src="js/scrollSuave.js"></script>
+    <script src="js/modal.js"></script>
+
+    <script src="js/prefixfree.min.js"></script>
 </body>
 
 </html>
